# ChangeLog for www-apache/mod_proxy_html
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_proxy_html/ChangeLog,v 1.15 2012/03/30 06:03:04 patrick Exp $

*mod_proxy_html-3.1.2 (30 Mar 2012)

  30 Mar 2012; Patrick Lauer <patrick@gentoo.org> +mod_proxy_html-3.1.2.ebuild:
  Bump for #338573. Ebuild by Ben Roberts

*mod_proxy_html-3.0.1 (17 Sep 2009)

  17 Sep 2009; Benedikt Böhm <hollow@gentoo.org>
  -mod_proxy_html-3.0.1_pre20071125.ebuild, +mod_proxy_html-3.0.1.ebuild:
  version bump

  31 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
  files/27_mod_proxy_html.conf, metadata.xml:
  update metadata; cleanup

*mod_proxy_html-3.0.1_pre20071125 (25 Nov 2007)

  25 Nov 2007; Benedikt Böhm <hollow@gentoo.org>
  files/27_mod_proxy_html.conf, -mod_proxy_html-2.4.3.ebuild,
  -mod_proxy_html-2.5.1.ebuild, mod_proxy_html-3.0.0.ebuild,
  +mod_proxy_html-3.0.1_pre20071125.ebuild:
  version bump (fixes #197605); cleanup

  22 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  mod_proxy_html-3.0.0.ebuild:
  stable x86, bug 192273

*mod_proxy_html-3.0.0 (08 Sep 2007)

  08 Sep 2007; Benedikt Böhm <hollow@gentoo.org>
  files/27_mod_proxy_html.conf, +mod_proxy_html-3.0.0.ebuild:
  version bump, #187739

  15 Jan 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
  mod_proxy_html-2.4.3.ebuild, mod_proxy_html-2.5.1.ebuild:
  Cleanup.

  10 Jul 2006; Simon Stelling <blubb@gentoo.org>
  mod_proxy_html-2.5.1.ebuild:
  added ~amd64 keyword

  04 Jun 2006; Michael Stewart <vericgar@gentoo.org>
  mod_proxy_html-2.4.3.ebuild:
  Address dependency issues caused by depend.apache. Refer to bug 107127.

  27 Feb 2006; Michael Stewart <vericgar@gentoo.org>
  mod_proxy_html-2.4.3.ebuild, mod_proxy_html-2.5.1.ebuild:
  Fix global-scope call to xml-config. Fixes bug 123965

  12 Dec 2005; Andrej Kacian <ticho@gentoo.org> mod_proxy_html-2.4.3.ebuild:
  Stable on x86, bug #106465.

*mod_proxy_html-2.5.1 (26 Oct 2005)
