@@ -1,9 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX 27_mod_proxy_html.conf 1778 RMD160 3f211f775fd1946dad64a5c92a3ce10536da5ba8 SHA1 0cb6844ffcfa23935a06aad93784ae2c0f086808 SHA256 43e88f594b41fae5e2fcf929042f31a3417a553280b5e411228763379cf8c744
 DIST mod_proxy_html-3.0.0.c.bz2 12061 RMD160 15215218e1da3051ca3642462d943f7ad680f9ce SHA1 dc36b4dd1a7985f43486e37a66b98587f2e1c532 SHA256 77aeb4bfbd34930859d4ed203f5a12083412362c36912f57a9d5271e9f1d17a2
 DIST mod_proxy_html-3.0.1.tar.bz2 19488 RMD160 0a4b4530219ee6e63a12dcbdc51e8275ceec71e6 SHA1 ed91fb0e37e90a1d892c2fa78513ce60791dbb86 SHA256 69b9b4a107788a150d84b897656db443b51e13cb1f712a614ba3f7baad0d195d
 DIST mod_proxy_html-3.1.2.tar.bz2 23019 RMD160 68a704720d9a726970fd283b0b8f0016da770227 SHA1 cd31a2af413e9e3315db617880659d5e93aaf09f SHA256 a1aee758bda605e153868b91188ebf2c527b8eeb0f115d11af152078e65895bf
 EBUILD mod_proxy_html-3.0.0.ebuild 890 RMD160 c10492271759c35d9de4a0e493a12aa50c66854e SHA1 87fa891967e4ea5a480e69518ad2268d5d2d30e9 SHA256 2dff11e5e3aa3a64d59e56c5486da0e73db95281559003d6d4669aa51fd99fad
-EBUILD mod_proxy_html-3.0.1.ebuild 751 RMD160 223165d4d5edbfa6c7f925547c8d14ce7c94736b SHA1 3dc9b6de2cee5e2f171ae72f711536cbadf00f7a SHA256 8751389144d52f43575733dee51883063d1bc3e3287aeae9912b89b8f546108a
+EBUILD mod_proxy_html-3.0.1.ebuild 747 RMD160 3b6f693f523bdefb2b4c120979fff0cb85a0a7d8 SHA1 184b1040031dd64608b0598d7b40772903d63cdb SHA256 d4732404357c7dee48ead292c324b17fe59e5b32d4856441a39371fceed35e53
 EBUILD mod_proxy_html-3.1.2.ebuild 907 RMD160 57ba607c5876550ca37169a54d5ee31120a01b8f SHA1 c3db8b1e026fe2d3420243ee5bda0dc1e5721fba SHA256 7676ff16dfa19139e98db281f84df4541908793fbc8970a42f2b53118ebe5b12
-MISC ChangeLog 2555 RMD160 4b478ef6a8e3116547d2b13ef1dfa588cf5eddc3 SHA1 67619728314a1302ff2ce5cbc2ec55071d23f203 SHA256 b126e31c06125114a71af020c5cc4dc9b8b1eb3a18d89ab66b91e5a9983b6a25
+MISC ChangeLog 2666 RMD160 08bd19ef7da507c26fe75c9d85b8de6477939897 SHA1 5d61b2227d60d5acba4d4a6c12e7b8d50428dc3c SHA256 7f11d77beafc11a1db800ab32bf85244df73c842fd45f69353be7044ae606e60
 MISC metadata.xml 160 RMD160 a0f6e133e170b7477018d8584c20e8723f6914fa SHA1 a3b9b520ec43ee1f9b1c7b5c5b8745bf84454c03 SHA256 3c312146c4cb5b912d6f56292242ce3a85c629ca98ee7ef0a84ca575708b44fe
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPpmssAAoJEOTDgjZ80txdqgkIAJxWZfaHXkcvXvm10FEaVx6t
+j4e1ypn/xrY7T/rypyfhDM+QbJvUOVwDeIcyfX9oMlHrFzruEdtl6S0CX+QhrVIe
+DGh+YVjobGGtG2OxDHwi+q7qwqZZW7/HUl3+OLEUz4Ml1BZCvyuVZMM3ddMr/0IA
+3BCa59veFn4qsjbb9BMNypUqsxQvGnFB2kpP3cSmxbLbD3IHgWi69QajdoYmUatF
+8xxSpu+dH3xaNXkpe8Sa3EUqSra3oqYMh16hVRQYaEWS08zIPkc2j2C2diTCv54o
+XHzl/JmK+O7TWtUK9dmoehiKfcfElD68Jt0iqEzBR3CF2tZ5NVjebJckLWlrNWs=
+=P+AL
+-----END PGP SIGNATURE-----
