@@ -1,6 +1,9 @@
 # ChangeLog for www-apache/mod_proxy_html
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_proxy_html/ChangeLog,v 1.15 2012/03/30 06:03:04 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_proxy_html/ChangeLog,v 1.16 2012/05/06 12:14:31 ago Exp $
+
+  06 May 2012; Agostino Sarubbo <ago@gentoo.org> mod_proxy_html-3.0.1.ebuild:
+  Stable for amd64, wrt bug #411721
 
 *mod_proxy_html-3.1.2 (30 Mar 2012)
 
